--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "insomnia-plugin-param",
-  "version": "0.1.0",
-  "description": "An Insomnia plugin to ask values to the user when making requests.",
+  "version": "0.2.0",
+  "description": "An Insomnia plugin to parameterize requests",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -15,10 +15,11 @@
   "license": "MIT",
   "repository": "https://github.com/superruzafa/insomnia-plugin-param",
   "insomnia": {
-    "name": "param"
+    "name": "param",
+    "description": "Parameterize requests"
   },
   "dependencies": {
-    "date-fns": "^2.9.0"
+    "date-fns": "^2.11.0"
   },
   "devDependencies": {
     "jest": "^25.1.0"
